--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>cd.connect.plugin</groupId>
-	<artifactId>prescan-plugin</artifactId>
+	<groupId>cd.connect.plugins</groupId>
+	<artifactId>connect-prescan-plugin</artifactId>
 	<version>1.1-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
@@ -81,12 +81,6 @@
 			<artifactId>classpath-scanner</artifactId>
 			<version>[1.4, 2)</version>
 		</dependency>
-
-		<!--<dependency>-->
-			<!--<groupId>io.github.lukehutch</groupId>-->
-			<!--<artifactId>fast-classpath-scanner</artifactId>-->
-			<!--<version>1.9.18</version>-->
-		<!--</dependency>-->
 
 		<dependency>
 			<groupId>cd.connect.composites.java</groupId>
